--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "author": "faisal",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.1",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.3.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.1.0",
     "typeorm": "^0.2.34",
     "typescript": "^4.3.5"
-  }
+  },
+  "devDependencies": {}
 }
